# pendulum_sim

./: .env  .env.example  .gitignore  IGNORE_double_pendulum_simple_controls2.py  README.md  README.md.html  annotated_double_pendulum_rl.py  double_pendulum_rl.py  double_pendulum_rl_annotated.py  double_pendulum_simple_controls_annotated.py  environment.yml  equations_of_motion.py  generate_readme_stats.py  linearization.py  noise_ligo.py  pend_controls.py  pend_rl-2.py  pend_rl.py  pendulum_model.py  pyproject.toml  requirements.txt  tools_check_merge_conflicts.py  tools_compare_performance.py  tools_migrate_root_pngs.py  tools_refresh_readme.py  tools_run_pipeline.sh  tools_sync_docs_images.py
Figures/: README.md
artifacts/metrics/: latest_metrics_eval_modes.json  latest_metrics_lqr.json  latest_metrics_rl.json
code_drafts/: IGNORE_double_pendulum_simple_controls2.py  double_pendulum_rl.py  double_pendulum_simple_controls.py
docs/: conf.py  index.rst
docs/runs/: README.md  run_001.md  run_003.md  run_004.md  run_005.md  run_006.md  run_007.md  run_008.md
noise/: 2013.Charles.40m.elog8786.20130628seismicNoiseMeters.csv  README.md  aosem_noise.csv  asd_tools.py  inspect_asd_tools.py
tests/: conftest.py  test_control.py  test_lqr_math.py  test_noise.py  test_physics.py  test_rl_reward.py
tools/: tools_archive_run.py  tools_compare_performance.py  tools_create_run_page.py  tools_inspect_external_noise.py  tools_migrate_root_pngs.py  tools_refresh_readme.py  tools_repair_noise_merge.py  tools_run_pipeline.sh  tools_sync_docs_images.py
(+44 files in other folders)
