[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendulum-sim"
version = "0.1.0"
description = "LIGO-inspired pendulum control sandbox (RL, LQR, and cascade modes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
pendulum-rl = "pendulum_sim.rl_pipeline:main"
pendulum-lqr = "pendulum_sim.lqr_pipeline:main"
